0.17.3
	update: even better search function (ticket:20)
0.17.2 2009-07-22
	new feature: configure default SNMP community (by jthurman)
	new feature: "$untagged", "$portless", "$nameless" and "$masklen_OP_NN" autotags
	new feature: knight button in IPv4 tree
	new feature: searching by attribute value or port reservation comment
	update: show appropriate message, if a record cannot be found
	update: add Cisco dictionary entry for WS-CBS3030-DEL. closes ticket 225 (by jthurman)
	update: add OS, router, fibre switch dictionary entries for ticket 238 (by Aaron)
	update: allow variations of FC WWN as an L2 address (by killsystem)
	update: port L2 address can be reused on the same object
	update: same port name can be repeated for an object with different types
	update: added comment field for IPv4 networks
	update: NetApp records (by Sander Klein)
	update: APC records (by Ray Robertson)
	bugfix: do not produce PHP warning on LivePTR tab
	bugfix: wrong port type set for WS-C2950-24. closes ticket 229 (by jthurman)
	bugfix: improved IOS detection and fixed a logic error. closes ticket 232 (by jthurman)
	bugfix: user account autotags were not generated under certain conditions (reported by Jason Hamilton)
	bugfix: correctly remove tags, when deleting files
	bugfix: switchvlans failed on "%" or "~" character in port name (by Boris Lytochkin)
	bugfix: search failed, when only one RS pool was found for request
	bugfix: large images could not be rendered often due to memory limit hit
	new feature: rackspace tab is shown only if there is at least one rack
		in the system. Closes ticket 234.
0.17.1 2009-06-03
	bugfix: tags were not displayed on "File" page
	bugfix: multiline comment for an added file was stored incorrectly
	bugfix: user's displayed name was sometimes lost with LDAP auth
	bugfix: rackspace rows highlightling was broken in previous release
	bugfix: IPv4 address picker window was broken