@@ -1,5 +1,6 @@
 0.17.3
 	update: even better search function (ticket:20)
+	new feature: tags quick list on "Tags" tab (ticket:259)
 0.17.2 2009-07-22
 	new feature: configure default SNMP community (by jthurman)
 	new feature: "$untagged", "$portless", "$nameless" and "$masklen_OP_NN" autotags
